2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: fixed --buildmap

2002-07-04  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc,exult.cc,ucsched.cc:  Added 'rest_time', so Avatar
	will return to a standing position when not doing anything else.
	This fixes the spell-casting bug where you're stuck in the last
	casting frame, but it may cause some new bugs...

	* gamewin.cc,exult.cc:  Attempting to remove the
	halt-after-teleport, which I think is no longer needed (and is
	obviously wrong).

2002-07-03  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc (Projectile_effect): Delay for delayed-explosions.

	* gamewin.cc: Fade palette back in at end of setup().
	* usecode/ucinternal.cc:  Always call link_party(), even if new
	game, and set party_count to 0.

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objnames.cc: implemented "x's ashes" name in SI
	* font.cc: fixed word wrapping off-by-hlead

2002-07-02  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc (Game_window): Set singleton after creating pal.
	* Various:  Merged in activate() fixes from 1.00 branch.

2002-07-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: fixes to SI item names (thanks sb-x)
	* objnames.cc: moved naming code to separate file

2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: even more item names for SI

2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeid.h: let paint_shape paint non-rle shapes properly
	* vgafile.cc: assert(rle); in the paint_rle_* functions
	* objs.cc: more item names for SI

2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: finally fixed 'blood' names

2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Configuration.*, exult.cc: added -c option for alternate config files
	  (quite useful if you have multiple data dirs or languages of BG/SI)
