@@ -1,5 +1,7 @@
 2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* exult.cc: fixed --buildmap
+	* autogen.sh: fixed problem when automake was compiled with aclocal
+	data directory /usr/local/share/aclocal
 
 2002-07-04  Jeff Freedman  <jeff@amy.nerble.net>
 
